--- a/src/styles.css
+++ b/src/styles.css
@@ -128,7 +128,7 @@ label {
 
   letter-spacing: .2rem;
   color:#fbfaf9;
-  position: absolute;
+  position: relative;
   text-decoration: center;
   left: 0%;
   top:33%;
