--- a/src/styles.css
+++ b/src/styles.css
@@ -20,43 +20,30 @@ body {
 
 #container {
   width: 400px;
-  height: 300px;
-  background-color: rgba(37, 35, 35, 0.3);
+  height: 400px;
+  background-color: rgba(37, 35, 35, 0.5);
   border-radius: 10px;
   margin: 0 auto;
-  margin-top: 120px;
+  margin-top: 100px;
   text-align: center;
 }
 
+
 .calculus-container {
-  width: 600px;
-  height: 500px;
+  width: 500px;
+  height: 400px;
   background-color: rgba(37, 35, 35, 0.3);
   border-radius: 10px;
   margin: 0 auto;
-  margin-top: 55px;
+  margin-top: 0px;
   text-align: center;  
 }
 
 #container img {
   width: 120px;
   height: 120px;
-  margin-top: -60px;
-  margin-bottom: 30px;
-}
-
-#container01 img {
-  width: 60px;
-  height: 60px;
-  margin-top: -30px;
-  margin-bottom: 15px;
-}
-
-#container02 img {
-  width: 60px;
-  height: 60px;
-  margin-top: -30px;
-  margin-bottom: 15px;
+  margin-top: -50px;
+  margin-bottom: 20px;
 }
 
 .processo {
@@ -100,15 +87,16 @@ a:hover {
 
 label {
 
-  letter-spacing: .2rem;
+  letter-spacing: 0.6px;
   color:#fbfaf9;
   position: relative;
-  text-decoration: center;
+  text-decoration: right;
   left: 0%;
   top: 15%;
   width: 100%;
   text-align: center;
-  
+  text-transform: uppercase;
+   
   }
 
   
@@ -159,11 +147,12 @@ letter-spacing: .1rem;
 
   width: 60%;
   padding: 5px;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   border-radius: 5px;
   text-decoration:solid;
- 
+  padding-left: 15px;
+   
   }
 
  .ok {
@@ -183,7 +172,7 @@ letter-spacing: .1rem;
 
   }
 
- 
+  
   
 
 
